--- a/Lab_5/index.html
+++ b/Lab_5/index.html
@@ -50,7 +50,7 @@
 	</section>
 	<section id='task-3'>
 		
-		<input type="text" id="rugInput" value= "['a','b','b','a'],['b','b','b','b'],['a','b','b','a']"/>
+		<input type="text" id="rugInput" value= "abba,bbbb,abba"/>
 		<button onclick="Rug_function()" >Result</button>
 		<div class="output">
 			<h2>Your rug is:</h2>
