Lab_5 Fixeb Bug

--- a/Lab_5/index.html
+++ b/Lab_5/index.html
@@ -18,9 +18,9 @@
 		</div>
 		<div id="Gander">
 			<h2>Gander</h2>
-			<input type="radio" id="male" name="gender" onclick="male = true" checked>
+			<input type="radio" id="male" name="gender" onclick="gander = 'male'" checked>
 			<label for="male">Male</label>
-			<input type="radio" id="female" name="gender"onclick="male = false">
+			<input type="radio" id="female" name="gender"onclick="gander = 'female'">
 			<label for="female">Female</label>
 		</div>
 		<div id="birthday">
