--- a/Lab_5/index.html
+++ b/Lab_5/index.html
@@ -26,7 +26,7 @@
 		<div id="birthday">
 			<div id="TEST">
 				<h2>Your birthday</h2>
-				<input  value="2001-03-01" onchange="date_birth=this.value" min="1000-01-01" max="2020-12-31">
+				<input  type="date" value="2001-03-01" onchange="date_birth=this.value" min="1000-01-01" max="2020-12-31">
 			</div>
 		</div>
 		<div class="output">
