Lab1 add and fix micro bug

--- a/Lab_5/index.html
+++ b/Lab_5/index.html
@@ -51,11 +51,14 @@
 	<section id='task-3'>
 		
 		<input type="text" id="rugInput" value= "abba,bbbb,abba"/>
-		<button onclick="Rug_function()" >Result</button>
+		<button id='Result_3'onclick="Rug_function()" >Result</button>
 		<div class="output">
 			<h2>Your rug is:</h2>
 			<output id="rugRes">........</output>
 		</div>
 	</section>
+	<footer>
+		Все права защищены Пашкой Клёминым(не катайте) 2020г.
+	</footer>	
 </body>
 </html>
